gcc/testsuite/gdc.test/fail_compilation/widechars.d

/*
DISABLED: win32 win64
TEST_OUTPUT:
---
fail_compilation/widechars.d(10): Error: undefined identifier `wchar_t`, did you mean `dchar`?
---
*/

wchar_t x;
